// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Handles demo 1: Text drawn after backgrounds 1`] = `
Array [
  "div.Box",
  "div.Red",
  "div.Blue",
  "'Red'",
  "'Blue'",
]
`;

exports[`Handles demo 2: Positioned elements drawn on top 1`] = `
Array [
  "div.Box",
  "div.Blue",
  "'Blue'",
  "div.Red.rel",
  "'Red'",
]
`;

exports[`Handles demo 3: All things being equal, source order wins. 1`] = `
Array [
  "div.Box",
  "div.Red.rel",
  "'Red'",
  "div.Blue.rel",
  "'Blue'",
]
`;

exports[`Handles demo 4: z-index overrides source order 1`] = `
Array [
  "div.Box",
  "!div.Blue.rel.z0",
  "'Blue'",
  "!div.Red.rel.z1",
  "'Red'",
]
`;

exports[`Handles demo 5: Default z-index (auto) is treated as 0 for ordering 1`] = `
Array [
  "div.Box",
  "!div.Red.rel.z0",
  "'Red'",
  "div.Blue.rel",
  "'Blue'",
]
`;

exports[`Handles demo 6: Negative z-indices are drawn first of all 1`] = `
Array [
  "!div.Blue.rel.z-1",
  "'Blue'",
  "div.Box",
  "div.Red",
  "'Red'",
]
`;

exports[`Handles demo 7: Introducing a stacking context 1`] = `
Array [
  "!div.Box.rel.z0",
  "!div.Blue.rel.z-1",
  "'Blue'",
  "div.Red",
  "'Red'",
]
`;
